fix buttons being too large on mobile

--- a/Style/index.css
+++ b/Style/index.css
@@ -73,7 +73,7 @@ html, body {
 .MORE-ABOUT-ME-BUTTON {
     margin-left: auto;
     margin-right: auto;
-    width: 600px;
+    width: 400px;
     margin-top: 100px;
 }
 
@@ -130,7 +130,7 @@ html, body {
 .PRICING-BUTTON {
     margin-left: auto;
     margin-right: auto;
-    width: 600px;
+    width: 400px;
     margin-top: 10px;
 }
 
@@ -226,7 +226,7 @@ html, body {
 .MY-PROJECTS-BUTTON {
     margin-left: auto;
     margin-right: auto;
-    width: 600px;
+    width: 400px;
     margin-top: 10px;
 }
 
